Visual fixes: better look on mobile phones; fixed logout error (now function logout returned valid result)

--- a/qapp/static/css/styles.css
+++ b/qapp/static/css/styles.css
@@ -36,7 +36,7 @@ input[type=submit] {
 /* Break long hyperlinks */
 
 a {
-	word-wrap: break-word;
+    word-wrap: break-word;
 }
 
 /* End of general */
@@ -44,33 +44,35 @@ a {
 /* Index buttons */
 
 .index-button {
-	background-color: #333333;
-	display: inline-block;
-	cursor: pointer;
-	color: #FFFFFF;
-	font-family: Arial;
-	font-size: 28px;
-	font-weight: bold;
-	height: 130px;
-	width: 530px;
-	text-decoration: none;
-	text-align: center;
-	line-height: 130px;
-	margin: 10px 10px;
-	border-style: solid;
+    background-color: #333333;
+    display: inline-block;
+    cursor: pointer;
+    color: #FFFFFF;
+    font-family: Arial;
+    font-size: 28px;
+    font-weight: bold;
+    height: 130px;
+    width: 98%;
+    text-decoration: none;
+    text-align: center;
+    line-height: 130px;
+    margin: 10px 10px;
+    border-style: solid;
     border-width: 1px;
-	border-color: #333333;
+    border-color: #333333;
 }
+
 .index-button:hover {
-	color: #000000;
-	background-color: #DDDDDD;
-	border-style: solid;
+    color: #000000;
+    background-color: #DDDDDD;
+    border-style: solid;
     border-width: 1px;
-	border-color: #333333;
+    border-color: #333333;
 }
+
 .index-button:active {
-	position:relative;
-	top:1px;
+    position:relative;
+    top:1px;
 }
 
 /* End of index buttons */
@@ -102,13 +104,12 @@ a {
     text-decoration: none;
 }
 
-.wp-table th:first-child,
 .wp-table td:first-child {
     padding-left: 16px;
 }
 
-.wp-table td,
-.wp-table th {
+
+.wp-table td {
     padding: 8px 2px;
     display: table-cell;
     text-align: left;
@@ -116,7 +117,15 @@ a {
 }
 
 .wp-table th {
+    height: 80px;
+    width: 50px;
+}
+
+.wp-table .rotated {
+    text-align: center;
     font-weight: bold;
+    position: relative;
+    transform: rotate(270deg);
 }
 
 .wp-table th.field-header {
@@ -442,28 +451,28 @@ make the two columns stack on top of each other instead of next to each other */
     }
 
     .dropdown .dropbtn {
-        font-size: 30px;
+        font-size: 46px;
     }
 
     .navbar a {
-        font-size: 30px;
+        font-size: 46px;
     }
 
     .index-button {
         width: 95%;
-        font-size: 30px;
+        font-size: 46px;
     }
 
     .standard-button {
         width: 250px;
-        height: 50px;
-        font-size: 26px;
+        height: 60px;
+        font-size: 46px;
     }
 
     input[type=submit] {
-        width: 250px;
-        height: 50px;
-        font-size: 26px;
+        width: 280px;
+        height: 60px;
+        font-size: 30px;
     }
 
     select {
@@ -482,11 +491,11 @@ make the two columns stack on top of each other instead of next to each other */
     input[type=password] {
         width: 400px;
         height: 50px;
-        font-size: 26px;
+        font-size: 32px;
     }
 
     textarea {
-        font-size: 26px;
+        font-size: 32px;
         resize: none;
         height: 300px;
         width: 400px;
@@ -535,7 +544,16 @@ make the two columns stack on top of each other instead of next to each other */
 
     .wp-table {
         width: 90%;
-        font-size: 18px;
+        font-size: 32px;
+    }
+
+    .wp-table th {
+        height: 140px;
+        width: 50px;
+    }
+
+    .wp-table .rotated {
+       left: -30px;
     }
 
     .wp-table .checkbox-area {
@@ -550,7 +568,17 @@ make the two columns stack on top of each other instead of next to each other */
 
     .ok-button-long,
     .nok-button-long {
-        right: -220px;
+        right: -230px;
         width: 350px;
+    }
+
+    .login-table {
+        font-size: 50px;
+    }
+
+    .login-table input {
+        font-size: 50px;
+        width: 85%;
+        height: 60px;
     }
 }
